<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/btn_back_category"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_set"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_back_category"
            app:layout_constraintLeft_toRightOf="@id/btn_back_category"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_category"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/darkgray"
            app:layout_constraintTop_toBottomOf="@id/btn_back_category" />

        <TextView
            android:id="@+id/tv_help_category_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/hint_category_set"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/line_category" />
        <!--lineHeight api-level 28 부터 지원하므로 라인 분리하여 각각 뷰를 작성함. -->
        <TextView
            android:id="@+id/tv_help_category_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/hint_category_set2"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_help_category_1" />

        <TextView
            android:id="@+id/tv_help_category_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/hint_category_set3"
            android:textColor="@color/darkgray"
            android:textSize="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_help_category_2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_help_category_3"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <Space
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/rd_movie_category_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_all"
                    android:textSize="25dp"
                    android:checked="false"
                    android:tag="0"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_drama"
                    android:textSize="25dp"
                    android:checked="false"
                    android:tag="1"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_horror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_horror"
                    android:textSize="25dp"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_war"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_war"
                    android:textSize="25dp"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_adventure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_adventure"
                    android:textSize="25dp"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_ani"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_ani"
                    android:textSize="25dp"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_thriller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_thriller"
                    android:textSize="25dp"
                    android:checked="false"
                    />
            </LinearLayout>
            <Space
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rd_movie_category_roman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_romance"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_action"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_martial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_mutial"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_musical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_musical"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_noir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_noir"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_crime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_crime"
                    android:textSize="25dp"
                    />
                <RadioButton
                    android:id="@+id/rd_movie_category_sf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_sf"
                    android:textSize="25dp"
                    />
            </LinearLayout>
            <Space
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
