<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm_movie_detail"
            type="com.daou.cinecok.ui.main.search.dialog.MovieDetailViewModel" />
        <variable
            name="movie_info"
            type="com.daou.cinecok.data.model.MovieData" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_movie_image_detail"
                    bind_main_image="@{movie_info}"
                    android:layout_width="match_parent"
                    android:layout_height="530dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@id/tv_movie_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_test_movie_poster" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_gray"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_movie_image_detail"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/tv_title_movie_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@{movie_info.title}"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/ui_test_movieitem_title" />

                    <TextView
                        android:id="@+id/label_movie_detail_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/movie_detail_rating_lable"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="@id/tv_title_movie_detail"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_movie_detail" />

                    <TextView
                        android:id="@+id/tv_movie_detail_rating"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:includeFontPadding="false"
                        android:text="@{movie_info.userRating}"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/label_movie_detail_rating"
                        app:layout_constraintLeft_toRightOf="@id/label_movie_detail_rating"
                        app:layout_constraintTop_toTopOf="@id/label_movie_detail_rating"
                        tools:text="@string/ui_test_movieitem_userrating" />

                    <TextView
                        android:id="@+id/label_movie_detail_pubdate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_pubdate_lable"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/tv_movie_detail_rating"
                        app:layout_constraintTop_toTopOf="@id/label_movie_detail_rating" />

                    <TextView
                        android:id="@+id/tv_movie_detail_pubdate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:includeFontPadding="false"
                        android:text="@{movie_info.pubDate}"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/label_movie_detail_pubdate"
                        app:layout_constraintLeft_toRightOf="@id/label_movie_detail_pubdate"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/label_movie_detail_pubdate"
                        tools:text="2016" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:breakStrategy="simple"
                    android:lineHeight="19dp"
                    android:padding="5dp"
                    android:text="@{movie_info.movieDescription}"
                    android:textColor="@color/darkgray"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_movie_image_detail"
                    tools:text="@string/ui_test_movieitem_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/btn_back_movie_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_left_arrow_white" />

        <ToggleButton
            android:id="@+id/toggle_favorite_movie"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:background="@drawable/ic_favorite_toggle"
            android:checked="@{vm_movie_detail.isFavoriteMovie}"
            android:scaleType="fitXY"
            android:src="@drawable/ic_star_gray"
            android:textOff=""
            android:textOn=""
            android:textSize="0dp" />

    </FrameLayout>

</layout>